<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hazard_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/hazard_blue"
        app:title="@string/about_title"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:orientation="vertical"
                android:padding="18dp">

                <ImageView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="HazardScout application icon"
                    android:src="@drawable/ic_app_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/hazard_blue"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/hazard_text_secondary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/app_description"
                    android:textColor="@color/hazard_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/about_categories"
                    android:textColor="@color/hazard_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/about_github"
                    android:textColor="@color/hazard_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtGithub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:linksClickable="true"
                    android:textColor="@color/hazard_link" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/copyright"
                    android:textColor="@color/hazard_text_secondary"
                    android:textStyle="italic" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/about_developers"
                android:textColor="@color/hazard_blue"
                android:textSize="21sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/memberContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
